Fixed Spacing between cards [BUGFIXED]

--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -99,7 +99,7 @@ p {
 .cloudBody {
     position: absolute !important;
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 20px;
     z-index: 1;
     background-color: transparent;
